Order creation support added - to be tested
